--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<li><a href="#" data-nav-section="education">Educação</a></li>
 						<li><a href="#" data-nav-section="experience">Experiência</a></li>
 						<li><a href="#" data-nav-section="work">Trabalho</a></li>
-						<li><a href="#" data-nav-section="contact">Contato _ teste</a></li>
+						<li><a href="#" data-nav-section="contact">Conta testando</a></li>
 					</ul>
 				</div>
 			</nav>
