--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 		<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
-				<div class="author-img" style="background-image: url(images/Imgprofi.jpg);"></div>
+				<div class="author-img" style="background-image: url(images/PHOTO-2025-02-20-12-24-40.jpg);"></div>
 				<h1 id="colorlib-logo"><a href="index.html">Gabriel Vitor</a></h1>
-				<span class="position"><a href="#">Desenvolvedor</a>/Brasília</span>
+				<span class="position"><a href="#">Analista de BI</a>/Brasília</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -70,7 +70,7 @@
 						<li><a href="#" data-nav-section="education">Educação</a></li>
 						<li><a href="#" data-nav-section="experience">Experiência</a></li>
 						<li><a href="#" data-nav-section="work">Trabalho</a></li>
-						<li><a href="#" data-nav-section="contact">Conta testando</a></li>
+						<li><a href="#" data-nav-section="contact">Contanto</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -98,7 +98,7 @@
 					   					<div class="desc">
 						   					<h1>Olá, <br>me chamo Gabriel</h1>
 						   					 
-											   <a href="images/CURRICULO GABRIEL atualizado_compressed.pdf" class="btn btn-primary btn-learn" download="Curriculo atualizado.pdf" type="Application/pdf " target="_blank">Download CV <i class="icon-download4"></i></a>
+											   <a href="images/Curriculo - Gabriel - Vitor  2025 (1).pdf" class="btn btn-primary btn-learn" download="Curriculo atualizado.pdf" type="Application/pdf " target="_blank">Download CV <i class="icon-download4"></i></a>
 
 											</div>
 					   				</div>
@@ -113,7 +113,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>Desenvolvedor front-end e product designer <br>  </h1>
+						   					<h1>Especialista em Soluções de Dados e Análise Estratégica  <br>  </h1>
 												<p><a href="https://github.com/Gbriel-Vitor" class="btn btn-primary btn-learn" target="_blank">Veja meu portifólio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
@@ -134,19 +134,8 @@
 									<div class="about-desc">
 										<span class="heading-meta">Sobre mim</span>
 										<h2 class="colorlib-heading">Quem sou?</h2>
-										<p><strong>Me chamo, Gabriel Vitor</strong> Sou um profissional apaixonado por tecnologia,
-											dedicado a expandir constantemente meus
-											conhecimentos nesse campo em constante
-											evolução. Tenho experiência sólida na criação
-											de sistemas e sites utilizando WordPress, e meu
-											foco principal é o desenvolvimento front-end.
-											Combinando uma abordagem técnica com
-											uma visão criativa, sou capaz de entregar
-											soluções objetivas e eficientes. Atualmente,
-											estou em busca de uma nova oportunidade
-											desafiadora para crescer profissionalmente e
-											contribuir de forma significativa para o sucesso 
-											da empresa. </p>
+										<p><strong>Me chamo, Gabriel Vitor</strong> Sou um profissional apaixonado por tecnologia e pela análise de dados, sempre em busca de expandir meus conhecimentos em um campo dinâmico e em constante evolução. 
+											Tenho experiência sólida com ferramentas como SQL, PLSQL, Excel, BigQuery, Python, Power BI e Looker Studio, aplicando-as na análise de dados para fornecer insights valiosos e otimizar processos. Combinando habilidades técnicas com uma visão estratégica, sou capaz de transformar dados complexos em soluções claras e eficazes. Atualmente, estou em busca de uma oportunidade desafiadora onde possa continuar crescendo profissionalmente e contribuir de forma significativa para o sucesso da empresa. </p>
 									</div>
 								</div>
 							</div>
@@ -206,7 +195,7 @@
 								</span>
 								<div class="desc">
 									<h3>Back-end</h3>
-									<p>Atuando com PLSQL e Oracle APEX no tcu otimizando o BD</p>
+									<p>Atuando com PLSQL e Oracle APEX, Mysql,Big Query.</p>
 								</div>
 							</div>
 						</div>
@@ -228,7 +217,7 @@
 								</span>
 								<div class="desc">
 									<h3>Software</h3>
-									<p>Atualmente otimizando meus estudos com Python e bando de dados</p>
+									<p>Atualmente otimizando meus estudos com Python e bando de dados e com análise de dados</p>
 								</div>
 							</div>
 						</div>
@@ -249,8 +238,8 @@
 									<i class="icon-bulb"></i>
 								</span>
 								<div class="desc">
-									<h3>Front-end</h3>
-									<p>Desenvolvo aplicações web usando tencologias como react e bootstrap</p>
+									<h3>Análise de Dados</h3>
+									<p>Desenvolvo dashsboards utilizando power bi e looker studio</p>
 								</div>
 
 						</div>
@@ -341,7 +330,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>WordPress</h3>
+								<h3>Power bi</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -385,22 +374,22 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>React</h3>
+								<h3>Looker Studio</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:20%">
-								    <span>20%</span>
+								    <span>90%</span>
 								  	</div>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Php</h3>
+								<h3>Big Query</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:40%">
-								    <span>40%</span>
+								    <span>70%</span>
 								  	</div>
 								</div>
 							</div>
@@ -432,7 +421,7 @@
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-6">
-										      			<p>Graduando em ads, me formo em agosto de 2023. </p>
+										      			<p>Formado em  Análise e desenvolvimento de sistemas.</p>
 										      		</div>
 										      		<div class="col-md-6">
 										      			<p>Estudei na UDF de brasília, e nela pude participar de vários projetos que envolviam sites e apps</p>
@@ -459,10 +448,12 @@
 														<li>Wordpress</li>
 														<li>Bando de Dados</li>
 														<li>Oracle Apex</li>
-														<li>Bootstrap</li>
+														<li>Looker Studio</li>
 														<li>Figma</li>
-														<li>Php</li>
-														<li>React</li>
+														<li>Power Bi</li>
+														<li>Big Query</li>
+														<li>Pacote office</li>
+														<li>Google Sheets</li>
 													</ul>
 									        </div>
 									    </div>
@@ -504,6 +495,44 @@
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
+
+
+
+							<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Coordenador de Dados | Artplan </a></h2>
+					                  <p>FTenho experiência em ETL (Extração, Transformação e Carga) e na criação de 
+										dashboards com Power BI, Parábola e MySQL. Trabalho com dados de mídia e 
+										análise pós-clique no Google Analytics, além de gerar relatórios de mídia.  </p>
+					               </div>
+					            </div>
+					         </article>
+
+							<article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
+					            <div class="timeline-entry-inner">
+
+					               <div class="timeline-icon color-1">
+					                  <i class="icon-pen2"></i>
+					               </div>
+
+					               <div class="timeline-label">
+					                  <h2><a href="#">Analista de Dados | Aldeiah – Bradesco </a></h2>
+					                  <p>Fui responsável por otimizar processos e implementar automações para aumentar a 
+										eficiência. Realizei melhorias no banco de dados, garantindo sua integridade e 
+										performance. Meu foco foi habilitar decisões baseadas em dados e aprimorar a 
+										eficácia operacional. Também criei dashboards no Looker Studio para visualização 
+										de dados. </p>
+					               </div>
+					            </div>
+					         </article>
+
+
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
@@ -719,7 +748,7 @@
 									<i class="icon-map"></i>
 								</div>
 								<div class="colorlib-text">
-									<p>Brasília, Asa Sul</p>
+									<p>Taguatinga, Brasília</p>
 								</div>
 							</div>
 
