--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									
+									<li><a href="https://api.whatsapp.com/send?phone=5561999987717" target="_blank"><i class="icon-whatsapp"></i></a></li>
 								</div>
 							</div>
 						</div>
