--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					   			<div class="col-md-6 col-md-offset-3 col-md-pull-3 col-sm-12 col-xs-12 js-fullheight slider-text">
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
-						   					<h1>Especialista em <br>  Soluções de Dados e Análise Estratégica  <br>  </h1>
+						   					<h1><br> Especialista em Soluções de Dados e Análise Estratégica  <br>  </h1>
 												<p><a href="https://github.com/Gbriel-Vitor" class="btn btn-primary btn-learn" target="_blank">Veja meu portifólio <i class="icon-briefcase3"></i></a></p>
 											</div>
 					   				</div>
