--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@
 									<i class="icon-phone"></i>
 								</div>
 								<div class="colorlib-text">
-									<li><a href="https://api.whatsapp.com/send?phone=5561999987717" target="_blank"><p>Taguatinga, Brasília</p></i></a></li>
+									<a href="https://api.whatsapp.com/send?phone=5561999987717" target="_blank"><p>61 99998-7717</p></i></a>
 								</div>
 							</div>
 						</div>
