--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					   					<div class="desc">
 						   					<h1>Olá, <br>me chamo Gabriel</h1>
 						   					 
-											   <a href="images/Curriculo - Gabriel - Vitor  2025 (1).pdf" class="btn btn-primary btn-learn" download="Curriculo atualizado.pdf" type="Application/pdf " target="_blank">Download CV <i class="icon-download4"></i></a>
+											   <a href="images/Gabriel  Vitor.pdf" class="btn btn-primary btn-learn" download="Curriculo atualizado.pdf" type="Application/pdf " target="_blank">Download CV <i class="icon-download4"></i></a>
 
 											</div>
 					   				</div>
@@ -377,7 +377,7 @@
 								<h3>Looker Studio</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:20%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 								    <span>90%</span>
 								  	</div>
 								</div>
@@ -388,7 +388,7 @@
 								<h3>Big Query</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:40%">
+								  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
 								    <span>70%</span>
 								  	</div>
 								</div>
